--- a/trunk/bundle/Messages_ar.properties
+++ b/trunk/bundle/Messages_ar.properties
@@ -38,6 +38,7 @@ PendingDocsListTab=وثائق ريثما
 InProcessDocsListTab=في عملية
 CompleteDocsListTab=كامل
 RejectedDocsListTab=وثائق رفضت
+EdafatTab=إضافات
 
 ;CreateUpdateDocumentTab=إنشاء / تحديث وثيقتها
 ;UserAssignmentTab=تعيين المستخدم
@@ -65,6 +66,7 @@ LengthIs8=: 0-9، هو طول 8
 UserExists=المستخدم {0} موجود بالفعل
 UserDoesNotExist=المستخدم {0} غير موجود
 ApprovedCannotBeModified=تمت الموافقة على وثيقة {0} بالفعل، فإنه لا يمكن تعديلها
+ApprovedCannotBeDeleted=تمت الموافقة على وثيقة {0} بالفعل، لا يمكن حذفه
 AlreadyExists=وثيقة {0} موجود بالفعل
 
 User=مستخدم
