--- a/bundle/Messages_en.properties
+++ b/bundle/Messages_en.properties
@@ -35,9 +35,10 @@ Title=Title
 Description=Description
 
 PendingDocsListTab=Pending
-InProcessDocsListTab=In Process
+InProcessDocsListTab=InProcess
 CompleteDocsListTab=Complete
-RejectedDocsListTab=Rejected
+RejectedDocsListTab=Reject
+EdafatTab=Extras
 
 ;CreateUpdateDocumentTab=Create/Update Document
 CreateUpdateDocumentTab=Create
@@ -65,6 +66,7 @@ LengthIs8= : 0-9 , length is 8
 UserExists=The user {0} already exists
 UserDoesNotExist=The user {0} does not exist
 ApprovedCannotBeModified=The document {0} has been already approved, it cannot be modified
+ApprovedCannotBeDeleted=The document {0} has been already approved, it cannot be deleted
 AlreadyExists=The document {0} already exists
 
 User=User
