--- a/bundle/Messages_ar.properties
+++ b/bundle/Messages_ar.properties
@@ -1,8 +1,7 @@
 Copyright=©2013 وزارة الكهرباء والماء | جميع الحقوق محفوظة
-Rejected=مرفوض
-InProgress=في التقدم
-Completed=الانتهاء
-Status=وضع قانوني
+;InProgress=في التقدم
+;Completed=الانتهاء
+;Status=وضع قانوني
 MediaCenter=القصاصة اليومية
 ContactUs=اتصل بنا
 CustomerService=خدمات المستهلكين
@@ -15,6 +14,14 @@ Report=تقرير
 Select=اختار
 LogIn=تسجيل الدخول
 ForwardTo=انتقل إلى:
+
+Approve=وافق
+Reject=رفض
+Forward=إلى الأمام
+ForwardBack=إلى الأمام إلى الوراء
+Edit=تعديل
+Delete=حذف
+Revoke=سحب
 
 AreYouSure=هل أنت متأكد؟
 Alert=إنذار
@@ -30,13 +37,14 @@ RegisterNewDoc=تسجيل مستند جديد
 InsertOrUpdate=إدراج ملف جديد أو تحديث وثيقتها
 ResetFields=تعيين حقول فارغة
 Approved=وافق
+Rejected=مرفوض
 Submitted=المقدمة
 Title=لقب
 Description=تفصيل
 
 PendingDocsListTab=وثائق ريثما
 InProcessDocsListTab=في عملية
-CompleteDocsListTab=كامل
+CheckupDocsListTab=فحص يراجع
 RejectedDocsListTab=وثائق رفضت
 EdafatTab=إضافات
 
