--- a/trunk/bundle/Messages_en.properties
+++ b/trunk/bundle/Messages_en.properties
@@ -1,8 +1,7 @@
 Copyright=©Copyright 2013 Ministry of Electricity and Water | All Rights Reserved
-Rejected=Rejected
-InProgress=In Progress
-Completed=Completed
-Status=Status
+;InProgress=In Progress
+;Completed=Completed
+;Status=Status
 MediaCenter=Media Center
 ContactUs=Contact Us
 CustomerService=Customer Service
@@ -15,6 +14,14 @@ Report=Report
 Select=Select
 LogIn=Log in
 ForwardTo=Forward to:
+
+Approve=Approve
+Reject=Reject
+Forward=Forward
+ForwardBack=Forward back
+Edit=Edit
+Delete=Delete
+Revoke=Revoke
 
 AreYouSure=Are you sure?
 Alert=Alert
@@ -30,13 +37,14 @@ RegisterNewDoc=Register new document
 InsertOrUpdate=Insert new or update document
 ResetFields=Set fields empty
 Approved=Approved
+Rejected=Rejected
 Submitted=Submitted
 Title=Title
 Description=Description
 
 PendingDocsListTab=Pending
 InProcessDocsListTab=InProcess
-CompleteDocsListTab=Complete
+CheckupDocsListTab=Checkup
 RejectedDocsListTab=Reject
 EdafatTab=Extras
 
