--- a/bundle/Messages_ar.properties
+++ b/bundle/Messages_ar.properties
@@ -44,7 +44,7 @@ Description=تفصيل
 
 PendingDocsListTab=وثائق ريثما
 InProcessDocsListTab=في عملية
-CheckupDocsListTab=فحص يراجع
+VaultDocsListTab=عودة
 RejectedDocsListTab=وثائق رفضت
 EdafatTab=إضافات
 
