--- a/bundle/Messages_en.properties
+++ b/bundle/Messages_en.properties
@@ -44,7 +44,7 @@ Description=Description
 
 PendingDocsListTab=Pending
 InProcessDocsListTab=InProcess
-CheckupDocsListTab=Checkup
+VaultDocsListTab=Return
 RejectedDocsListTab=Reject
 EdafatTab=Extras
 
