--- a/bundle/Messages_ar.properties
+++ b/bundle/Messages_ar.properties
@@ -61,11 +61,12 @@ File=ملف
 FileNumber=رقم الملف
 Area=منطقة
 Block=منع
-Street=شارع
-Building=بناء
-Address=عنوان
-PACI=ه.ع.م.م
-PACINumber=ه.ع.م.م لملف
+Plot=قطعة أرض
+;Street=شارع
+;Building=بناء
+Address=العنوان
+;PACI=ه.ع.م.م
+;PACINumber=ه.ع.م.م لملف
 
 LengthOf=طول
 MustBeBetween=يجب أن يكون بين
@@ -84,6 +85,34 @@ DateTo=التاريخ إلى
 ByAddress=حسب العنوان
 ByApprover=بواسطة الموافق
 
+CheckupNumber=رقم الفحص
+DateOfCheckup=تاريخ الفحص
+DateOfSubmission=تاريخ التقديم
+
+Case=الحاله
+ Repeat=تكرار
+ StreamStrengthening=تقوية تيار
+ ReCheckup=إعادة فحص
+ NotToAttendCheckup=عدم حضور الفحص
+ New=جديد
+
+Result=النتيجه
+ Satisfactory=مرضيه
+ Unsatisfactory=غير مرضيه
+ Amendment=تعديل
+ DidNotAttendCheckup=لم يحضر الفاحص
+
+Postponement=فى حالة التاجيل
+ SupervisorPostponement=تاجيل من المشرف
+ OwnerPostponement=تاجيل من المالك
+ 
+UnsatisfactoryCase=فى حالة غير مرضيه
+ Postponed=تاجيل
+ NotReadyForInspection=الموقع غير جاهز للفحص
+ MayorIrregularities=مخالفات بلديه
+ AirConditioning=تكييف
+ ElectricalIrregularities=مخالفات كهرباء
+ OwnerDidNotAttend=لم يحضر المالك
 
 
 
