--- a/trunk/bundle/Messages_en.properties
+++ b/trunk/bundle/Messages_en.properties
@@ -61,11 +61,12 @@ File=File
 FileNumber=File Number
 Area=Area
 Block=Blk
-Street=Str
-Building=Bld
+Plot=Plot
+;Street=Str
+;Building=Bld
 Address=Address
-PACI=PACI
-PACINumber=PACI Number
+;PACI=PACI
+;PACINumber=PACI Number
 
 LengthOf=Length of
 MustBeBetween=must be between
@@ -83,3 +84,33 @@ DateFrom=From
 DateTo=To
 ByAddress=By address
 ByApprover=By approver
+
+CheckupNumber=Checkup number
+DateOfCheckup=Date of checkup
+DateOfSubmission=Date of submission
+
+Case=Case
+ Repeat=Repeat
+ StreamStrengthening=Strengthening the stream
+ ReCheckup=Re-checkup
+ NotToAttendCheckup=Not to attend checkup
+ New=New
+
+Result=Result
+ Satisfactory=Satisfactory
+ Unsatisfactory=Unsatisfactory
+ Amendment=Amendment
+ DidNotAttendCheckup=Did not attend checkup
+
+Postponement=Postponement
+ SupervisorPostponement=Postponement of the supervisor
+ OwnerPostponement=Postponement of the owner
+ 
+UnsatisfactoryCase=Case of unsatisfactory
+ Postponed=Postponed
+ NotReadyForInspection=Not ready for inspection
+ MayorIrregularities=Mayor of irregularities
+ AirConditioning=Air Conditioning
+ ElectricalIrregularities=Electrical irregularities
+ OwnerDidNotAttend=Owner did not attend
+
