--- a/trunk/bundle/Messages_ar.properties
+++ b/trunk/bundle/Messages_ar.properties
@@ -22,6 +22,7 @@ ForwardBack=إلى الأمام إلى الوراء
 Edit=تعديل
 Delete=حذف
 Revoke=سحب
+Checkup=فحص طبي عام
 
 AreYouSure=هل أنت متأكد؟
 Alert=إنذار
