--- a/bundle/Messages_ar.properties
+++ b/bundle/Messages_ar.properties
@@ -49,6 +49,7 @@ InProcessDocsListTab=في عملية
 VaultDocsListTab=عودة
 RejectedDocsListTab=وثائق رفضت
 EdafatTab=إضافات
+CheckUpCompleteTab=فحص كامل
 
 ;CreateUpdateDocumentTab=إنشاء / تحديث وثيقتها
 ;UserAssignmentTab=تعيين المستخدم
