--- a/bundle/Messages_en.properties
+++ b/bundle/Messages_en.properties
@@ -49,6 +49,7 @@ InProcessDocsListTab=InProcess
 VaultDocsListTab=Return
 RejectedDocsListTab=Reject
 EdafatTab=Extras
+CheckUpCompleteTab=Checkup complete
 
 ;CreateUpdateDocumentTab=Create/Update Document
 CreateUpdateDocumentTab=Create
