--- a/trunk/bundle/Messages_en.properties
+++ b/trunk/bundle/Messages_en.properties
@@ -48,7 +48,7 @@ PendingDocsListTab=Pending
 InProcessDocsListTab=InProcess
 VaultDocsListTab=Return
 RejectedDocsListTab=Reject
-EdafatTab=Extras
+EdafatTab=Edafat
 CheckUpCompleteTab=Checkup complete
 
 ;CreateUpdateDocumentTab=Create/Update Document
