--- a/trunk/bundle/Messages_en.properties
+++ b/trunk/bundle/Messages_en.properties
@@ -61,7 +61,7 @@ FieldOnlyAllows={0} field only allows {1}
 Field=Field
 CannotBeEmpty=cannot be empty
 File=File
-FileNumber=File Number
+FileNumber=File#
 Area=Area
 Block=Blk
 Plot=Plot
@@ -88,7 +88,10 @@ DateTo=To
 ByAddress=By address
 ByApprover=By approver
 
-CheckupNumber=Checkup number
+Checker=Checker
+CheckDate=Check date
+
+CheckupNumber=Checkup#
 DateOfCheckup=Date of checkup
 DateOfSubmission=Date of submission
 
