--- a/bundle/Messages_ar.properties
+++ b/bundle/Messages_ar.properties
@@ -88,6 +88,9 @@ DateTo=التاريخ إلى
 ByAddress=حسب العنوان
 ByApprover=بواسطة الموافق
 
+Checker=Checker
+CheckDate=Check date
+
 CheckupNumber=رقم الفحص
 DateOfCheckup=تاريخ الفحص
 DateOfSubmission=تاريخ التقديم
