--- a/bundle/Messages_en.properties
+++ b/bundle/Messages_en.properties
@@ -15,6 +15,10 @@ Select=Select
 LogIn=Log in
 ForwardTo=Forward to:
 
+SearchByFileNumber=Search File#
+EnableAutosearch=Enable Autosearch 
+Go=Go
+
 Approve=Approve
 Reject=Reject
 Forward=Forward
