--- a/trunk/bundle/Messages_ar.properties
+++ b/trunk/bundle/Messages_ar.properties
@@ -15,6 +15,10 @@ Select=اختار
 LogIn=تسجيل الدخول
 ForwardTo=انتقل إلى:
 
+SearchByFileNumber=البحث ملف #
+EnableAutosearch=تمكين البحث التلقائي 
+Go=تذهب
+
 Approve=وافق
 Reject=رفض
 Forward=إلى الأمام
@@ -88,8 +92,8 @@ DateTo=التاريخ إلى
 ByAddress=حسب العنوان
 ByApprover=بواسطة الموافق
 
-Checker=Checker
-CheckDate=Check date
+Checker=فاحص
+CheckDate=تاريخ تحقق
 
 CheckupNumber=رقم الفحص
 DateOfCheckup=تاريخ الفحص
