--- a/bundle/Messages_ar.properties
+++ b/bundle/Messages_ar.properties
@@ -18,6 +18,7 @@ ForwardTo=انتقل إلى:
 SearchByFileNumber=البحث ملف #
 EnableAutosearch=تمكين البحث التلقائي 
 Go=تذهب
+Clear=نظف
 
 Approve=وافق
 Reject=رفض
