--- a/trunk/bundle/Messages_en.properties
+++ b/trunk/bundle/Messages_en.properties
@@ -18,6 +18,7 @@ ForwardTo=Forward to:
 SearchByFileNumber=Search File#
 EnableAutosearch=Enable Autosearch 
 Go=Go
+Clear=Clear
 
 Approve=Approve
 Reject=Reject
