--- a/trunk/bundle/Messages_en.properties
+++ b/trunk/bundle/Messages_en.properties
@@ -50,11 +50,11 @@ Title=Title
 Description=Description
 
 PendingDocsListTab=Pending
-InProcessDocsListTab=InProcess
+InProcessDocsListTab=In process
 VaultDocsListTab=Return
 RejectedDocsListTab=Reject
 EdafatTab=Edafat
-CheckUpCompleteTab=Checkup complete
+CheckUpCompleteTab=Checkup
 
 ;CreateUpdateDocumentTab=Create/Update Document
 CreateUpdateDocumentTab=Create
