--- a/bundle/Messages_ar.properties
+++ b/bundle/Messages_ar.properties
@@ -100,6 +100,8 @@ CheckupNumber=رقم الفحص
 DateOfCheckup=تاريخ الفحص
 DateOfSubmission=تاريخ التقديم
 
+Note=مذكرة
+
 Case=الحاله
  Repeat=تكرار
  StreamStrengthening=تقوية تيار
