--- a/trunk/bundle/Messages_en.properties
+++ b/trunk/bundle/Messages_en.properties
@@ -100,6 +100,8 @@ CheckupNumber=Checkup#
 DateOfCheckup=Date of checkup
 DateOfSubmission=Date of submission
 
+Note=Note
+
 Case=Case
  Repeat=Repeat
  StreamStrengthening=Strengthening the stream
