--- a/bundle/Messages_ar.properties
+++ b/bundle/Messages_ar.properties
@@ -99,8 +99,10 @@ CheckDate=تاريخ تحقق
 CheckupNumber=رقم الفحص
 DateOfCheckup=تاريخ الفحص
 DateOfSubmission=تاريخ التقديم
-
 Note=مذكرة
+load_new=تحميل جديدة
+load_old=تحميل القديمة
+load_total=مجموع الحمل
 
 Case=الحاله
  Repeat=تكرار
