--- a/bundle/Messages_en.properties
+++ b/bundle/Messages_en.properties
@@ -98,9 +98,11 @@ CheckDate=Check date
 
 CheckupNumber=Checkup#
 DateOfCheckup=Date of checkup
-DateOfSubmission=Date of submission
-
+DateOfSubmission=Submit date
 Note=Note
+load_new=Load new
+load_old=Load old
+load_total=Load total
 
 Case=Case
  Repeat=Repeat
