--- a/trunk/bundle/Messages_ar.properties
+++ b/trunk/bundle/Messages_ar.properties
@@ -103,6 +103,7 @@ Note=مذكرة
 load_new=تحميل جديدة
 load_old=تحميل القديمة
 load_total=مجموع الحمل
+form_number_already_exists=عدد نموذج موجود بالفعل
 
 Case=الحاله
  Repeat=تكرار
