--- a/trunk/bundle/Messages_en.properties
+++ b/trunk/bundle/Messages_en.properties
@@ -103,6 +103,7 @@ Note=Note
 load_new=Load new
 load_old=Load old
 load_total=Load total
+form_number_already_exists=Form number already exists
 
 Case=Case
  Repeat=Repeat
