--- a/bundle/Messages_en.properties
+++ b/bundle/Messages_en.properties
@@ -63,6 +63,7 @@ UserAssignmentTab=Users
 
 ValidateTips=Fields with the <strong>bold</strong> labels are required.
 FieldOnlyAllows={0} field only allows {1}
+InvalidDate=Invalid date
 Field=Field
 CannotBeEmpty=cannot be empty
 File=File
