--- a/trunk/bundle/Messages_ar.properties
+++ b/trunk/bundle/Messages_ar.properties
@@ -63,6 +63,7 @@ UserAssignmentTab=ستخدم
 
 ValidateTips=يجب إدخال البيانات في الحقول التالية
 FieldOnlyAllows={0} حقل يسمح فقط {1}
+InvalidDate=تاريخ غير صالح
 Field=حقل
 CannotBeEmpty=لا يمكن أن تكون فارغة
 File=ملف
