--- a/trunk/bundle/Messages_ar.properties
+++ b/trunk/bundle/Messages_ar.properties
@@ -36,6 +36,7 @@ Ok=حسنا
 Cancel=إلغاء
 Close=أغلق
 Reset=إعادة تعيين
+Finish=نهاية
 Save=حفظ
 Send=إرسال لموافقة
 AddUser=إضافة مستخدم
@@ -64,6 +65,7 @@ UserAssignmentTab=ستخدم
 ValidateTips=يجب إدخال البيانات في الحقول التالية
 FieldOnlyAllows={0} حقل يسمح فقط {1}
 InvalidDate=تاريخ غير صالح
+WrongNumber=عدد خاطئ
 Field=حقل
 CannotBeEmpty=لا يمكن أن تكون فارغة
 File=ملف
