--- a/trunk/bundle/Messages_en.properties
+++ b/trunk/bundle/Messages_en.properties
@@ -36,6 +36,7 @@ Ok=Ok
 Cancel=Cancel
 Close=Close
 Reset=Reset
+Finish=Finish
 Save=Save
 Send=Send for an approval
 AddUser=Add User
@@ -64,6 +65,7 @@ UserAssignmentTab=Users
 ValidateTips=Fields with the <strong>bold</strong> labels are required.
 FieldOnlyAllows={0} field only allows {1}
 InvalidDate=Invalid date
+WrongNumber=Wrong number
 Field=Field
 CannotBeEmpty=cannot be empty
 File=File
